--- a/jpashop/build.gradle
+++ b/jpashop/build.gradle
@@ -10,7 +10,7 @@ sourceCompatibility = '11'
 
 configurations {
 	compileOnly {
-		extendsFrom annotationProcessorㅠㅕㅑ
+		extendsFrom annotationProcessor
 	}
 }
 
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 
